handleInform
