# app/apiserver/model/data.go
@@ -14,6 +14,20 @@ type DataRequest struct {
 	ИдПодразделения         string `json:"id_dep" validate:"required"`
 }
 
+//Информирование
+type Informs struct {
+	DataInform DataInform `json:"informs"`
+}
+
+type DataInform struct {
+	ТипДокумента      string `json:"type_doc" validate:"required"`
+	ИдДокумента       string `json:"id_doc" validate:"required"`
+	ИдОрганизации     string `json:"id_org" validate:"required"`
+	ИдПодразделения   string `json:"id_dep" validate:"required"`
+	ДатаВремяОтправки string `json:"date_time_create,omitempty"`
+	ДатаВремяДоставки string `json:"date_time_delivery,omitempty"`
+}
+
 //orders
 type Orders struct {
 	DataOrder DataOrder `json:"orders"`
@@ -28,7 +42,7 @@ type DataOrder struct {
 	ВидОбращения            string `json:"order_type" validate:"required"`
 	ПовторныйРемонт         string `json:"re_repair" validate:"required"`
 	ПричинаОбращения        string `json:"reason" validate:"required"` //reason
-	VINбазовый              string `json:"vin0" validate:"required"`   //*
+	VINбазовый              string `json:"vin0" validate:"required"`
 	VINпослеДоработки       string `json:"vin1,omitempty"`
 	ДатаВремяИнформирования string `json:"date_time_form,omitempty"`
 	Ответственный           string `json:"responsible" validate:"required"`
@@ -44,9 +58,9 @@ type ConsOrders struct {
 }
 
 type DataConsOrder struct {
-	ИдСводногоЗаказНаряда string `json:"id_cons_order" validate:"required"`    //*
-	ИдЗаявки              string `json:"id_request,omitempty"`                 //*
-	ДатаВремяСоздания     string `json:"date_time_create" validate:"required"` //*
+	ИдСводногоЗаказНаряда string `json:"id_cons_order" validate:"required"`
+	ИдЗаявки              string `json:"id_request,omitempty"`
+	ДатаВремяСоздания     string `json:"date_time_create" validate:"required"`
 	Ответственный         string `json:"responsible" validate:"required"`
 	ИдОрганизации         string `json:"id_org" validate:"required"`
 	ИдПодразделения       string `json:"id_dep" validate:"required"`
@@ -58,7 +72,7 @@ type Statuses struct {
 }
 
 type DataStatus struct {
-	ИдЗаказНаряда   string `json:"id_order"` //*
+	ИдЗаказНаряда   string `json:"id_order"`
 	ИдОрганизации   string `json:"id_org"`
 	ИдПодразделения string `json:"id_dep"`
 	OrderStatuses   `json:"statuses"`
@@ -66,7 +80,7 @@ type DataStatus struct {
 
 type OrderStatuses []struct {
 	Статус    string `json:"status"`
-	ДатаВремя string `json:"date_time_status"` //*
+	ДатаВремя string `json:"date_time_status"`
 }
 
 //запчасти
@@ -75,7 +89,7 @@ type Parts struct {
 }
 
 type DataPart struct {
-	ИдЗаказНаряда   string `json:"id_order"` //*
+	ИдЗаказНаряда   string `json:"id_order"`
 	ИдОрганизации   string `json:"id_org"`
 	ИдПодразделения string `json:"id_dep"`
 	OrderParts      `json:"parts"`
@@ -97,7 +111,7 @@ type Works struct {
 }
 
 type DataWork struct {
-	ИдЗаказНаряда   string `json:"id_order"` //*
+	ИдЗаказНаряда   string `json:"id_order"`
 	ИдОрганизации   string `json:"id_org"`
 	ИдПодразделения string `json:"id_dep"`
 	OrderWorks      `json:"works"`
@@ -105,34 +119,34 @@ type DataWork struct {
 
 type OrderWorks []struct {
 	Наименование            string `json:"name"`
-	КодОперации             string `json:"code"` /// не об
+	КодОперации             string `json:"code"`
 	НормативнаяТрудоёмкость string `json:"complexity"`
 	СтоимостьНЧ             string `json:"price_hour"`
 }
 
 //заказ наряд создание
 // type DataOrder []struct {
-// 	ИдЗаказНаряд                 string `json:"id_order" validate:"required"`                            //*
-// 	ВремяФомрированияЗаказНаряда string `json:"date_time_order" validate:"required,yyyy-mm-ddThh:mm:ss"` //*
-// 	ВидОбращения                 string `json:"type" validate:"required"`                                //*
+// 	ИдЗаказНаряд                 string `json:"id_order" validate:"required"`
+// 	ВремяФомрированияЗаказНаряда string `json:"date_time_order" validate:"required,yyyy-mm-ddThh:mm:ss"`
+// 	ВидОбращения                 string `json:"type" validate:"required"`
 // 	ПовторныйРемонт              bool   `json:"repeated" validate:"required"`
-// 	ПричинаОбращения             string `json:"reason" validate:"required"` //*
-// 	ЗаявкаИлиРасширение          string `json:"sign" validate:"required"`   //*
+// 	ПричинаОбращения             string `json:"reason" validate:"required"`
+// 	ЗаявкаИлиРасширение          string `json:"sign" validate:"required"`
 // 	Works                        `json:"works" validate:"required,dive,required"`
 // 	Parts                        `json:"parts" validate:"required,dive,required"`
 // }
 
 // type Works []struct {
-// 	НаименованиеРабот       string `json:"work_name" validate:"required"`  //*
-// 	НормативнаяТрудоёмкость int    `json:"normativ" validate:"required"`   //*
-// 	СтоимостьНормоЧаса      int    `json:"price_hour" validate:"required"` //*
+// 	НаименованиеРабот       string `json:"work_name" validate:"required"`
+// 	НормативнаяТрудоёмкость int    `json:"normativ" validate:"required"`
+// 	СтоимостьНормоЧаса      int    `json:"price_hour" validate:"required"`
 // }
 
 // type Parts []struct {
-// 	НаименованияЗапаснойЧасти string  `json:"repairs" validate:"required"`       //*
-// 	КаталожныйНомер           string  `json:"number" validate:"required"`        //*
-// 	Количество                int     `json:"qua" validate:"required"`           //*
-// 	ЕдИзмерения               string  `json:"unit" validate:"required"`          //*
-// 	Стоимость                 float32 `json:"price_repairs" validate:"required"` //*
-// 	Поставщик                 string  `json:"provider" validate:"required"`      //*
+// 	НаименованияЗапаснойЧасти string  `json:"repairs" validate:"required"`
+// 	КаталожныйНомер           string  `json:"number" validate:"required"`
+// 	Количество                int     `json:"qua" validate:"required"`
+// 	ЕдИзмерения               string  `json:"unit" validate:"required"`
+// 	Стоимость                 float32 `json:"price_repairs" validate:"required"`
+// 	Поставщик                 string  `json:"provider" validate:"required"`
 // }
